Twitter OAuth is working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <main id="main">
         <%= yield %>
       </main>
+      <b>user: <%= @current_user %></b>
     </div>
   </body>
 </html>
