--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,18 @@
   </head>
   <body>
     <%# These classes come from the Bootstrap CSS framework. %>
-    <nav class="navbar navbar-expand-lg bg-primary text-white mb-3">
-      <h1 class="title">Rotten Potatoes!</h1>
+    <nav class="nav nav-pills">
+      <ul class="nav">
+        <li class="nav-item active">
+          <a class="nav-link active" href="/movies">Rotten Potatoes!</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+      </ul>
     </nav>
     <div class="container">
       <%# Render "flash" messages in our application. This loads _flash.erb %>
