Ajax is working properly

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+#movieInfo {
+	padding: 2ex;
+	position: absolute;
+	border: 2px double grey;
+	background: wheat;
+}
