--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,10 @@
     <title>Rotten Potatoes!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <%= csrf_meta_tags %>
+	<%= stylesheet_link_tag 'application' %>
 	<%= javascript_include_tag 'application' %>
 	<%= javascript_include_tag 'movie_list_filter' %>
+	<%= javascript_include_tag 'movie_popup' %>
   </head>
   <body>
     <%# These classes come from the Bootstrap CSS framework. %>
